@@ -1,10 +1,5 @@
 #usr/lib/llvm-@LLVM_VERSION@/lib/liblld-@LLVM_VERSION@.so.1 /usr/lib/@DEB_HOST_MULTIARCH@/
-usr/lib/llvm-@LLVM_VERSION@/lib/liblldReaderWriter.a
-usr/lib/llvm-@LLVM_VERSION@/lib/liblldDriver.a
-usr/lib/llvm-@LLVM_VERSION@/lib/liblldYAML.a
 usr/lib/llvm-@LLVM_VERSION@/lib/liblldELF.a
-usr/lib/llvm-@LLVM_VERSION@/lib/liblldCore.a
-usr/lib/llvm-@LLVM_VERSION@/lib/liblldMachOOld.a
 usr/lib/llvm-@LLVM_VERSION@/lib/liblldMachO.a
 usr/lib/llvm-@LLVM_VERSION@/lib/liblldCOFF.a
 usr/lib/llvm-@LLVM_VERSION@/lib/liblldMinGW.a
